@@ -1,6 +1,6 @@
 Package: fastbeta
 Version: 0.3.2
-Date: 2025-01-24
+Date: 2025-02-08
 Title:
 	Fast Approximation of Time-Varying Infectious Disease Transmission
 	Rates
