@@ -40,7 +40,7 @@
 \title{News for \R{} Package \pkg{fastbeta}}
 \newcommand{\GH}{\href{https://github.com/davidearn/fastbeta/issues/#1}{GH##1}}
 
-\section{Changes in version 0.3.2 (2025-01-24)}{
+\section{Changes in version 0.3.2 (2025-02-08)}{
   \subsection{Significant User-Visible Changes}{
     \itemize{
       \item .
@@ -58,7 +58,11 @@
   }
   \subsection{New Features}{
     \itemize{
-      \item .
+      \item Function \code{seir.canonical} providing a nondimensional
+      interface to a special case (constant transmission, without vital
+      dynamics, without loss of immunity) of \code{seir} usage.  The
+      nondimensional parameters are the basic reproduction number and
+      the ratio of the mean latent period and mean generation interval.
     }
   }
   \subsection{Installation}{
